[tool.poetry]
name = "wispchat"
version = "0.1.0"
description = ""
authors = ["hidaris <zuocool@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.9"
loguru = "^0.7.0"
tenacity = "^8.2.3"
pydantic = "1.10.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
